--- a/home.html
+++ b/home.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <div id="challenge"></div>
-    <button id="change">change</button>
-    <a href="home.html">123</a>
+    <div>1231231</div>
     <script src="./script.js"></script>
   </body>
 </html>
