--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="challenge"></div>
     <button id="change">change</button>
-    <a href="home.html">123</a>
+    <a href="aa/home">123</a>
     <script src="./script.js"></script>
   </body>
 </html>
