--- a/ww/index.html
+++ b/ww/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="url=https://xxroyxx0308.github.io/challenge_of_don_t_do/">
-    <title>Yaaaa~</title>
+    <script>
+        window.location.href = "https://xxroyxx0308.github.io/challenge_of_don_t_do/";
+    </script>
 </head>
 </html>
