--- a/ww/index.html
+++ b/ww/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script>
-        window.location.href = "https://xxroyxx0308.github.io/challenge_of_don_t_do/";
+        window.location.href = "https://www.youtube.com/";
     </script>
 </head>
 </html>
