--- a/ww/index.html
+++ b/ww/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <script>
-        window.location.href = "https://www.youtube.com/";
-    </script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <script>
+            window.onload = function() {
+                window.location.reload(true);
+            };
+            window.location.href = "https://www.youtube.com/";
+        </script>
+    </head>
 </html>
