--- a/Ian/01/index.html
+++ b/Ian/01/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <script>
-            window.onload = function() {
+            window.onload = () => {
                 window.location.reload(true);
             };
-            window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
         </script>
     </head>
+    <body>
+        <script>
+            window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+        </script>
+    </body>
 </html>
