--- a/Ian/01/index.html
+++ b/Ian/01/index.html
@@ -3,14 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <script>
-            window.onload = () => {
+            window.onload = function() {
                 window.location.reload(true);
             };
-        </script>
-    </head>
-    <body>
-        <script>
             window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
         </script>
-    </body>
+    </head>
 </html>
