--- a/Ian/01/index.html
+++ b/Ian/01/index.html
@@ -6,7 +6,7 @@
             window.onload = function() {
                 window.location.reload(true);
             };
-            window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+            window.location.href = "https://chatgpt.com/";
         </script>
     </head>
 </html>
