--- a/Ian/01/index.html
+++ b/Ian/01/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <script>
-            window.onload = function() {
-                window.location.reload(true);
-            };
-            window.location.href = "https://chatgpt.com/";
+            window.location.href = "https://drive.google.com/file/d/1ipCZBiHX9JXBV0pHSIYRx0rgaUKrbeCE/view?usp=drive_link";
         </script>
     </head>
 </html>
